<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">One Moment</string>
    <string name="app_version">Version 2.3.1</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="action_add" translatable="false">Add</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="title_activity_espresso_test" translatable="false">EspressoTestActivity</string>

    <string name="navigation_item_text_0">World</string>
    <string name="navigation_item_text_1">Diary</string>
    <string name="navigation_item_text_2">Life in a day</string>
    <string name="navigation_item_text_3">Me</string>
    <string name="navigation_item_text_4">Settings</string>

    <string name="nav_header_user_name_text">Username</string>
    <string name="nav_header_location_text">Hubei Wuhan</string>
    <string name="content_des_profile_image">Profile Image</string>

    <string name="world_title">World</string>
    <string-array name="world_page_title">
        <item>Recommend</item>
        <item>Latest</item>
    </string-array>

    <string-array name="discovery_page_title">
        <item>Recommend</item>
        <item>Latest</item>
    </string-array>

    <string name="discovery_video_voted_up">Videos Voted Up</string>
    <string name="video_vote_up_title">Voted Up</string>
    <string name="discovery_alarm">alarm everyday</string>
    <string name="discovery_title">Discovery</string>

    <string name="me_title">Me</string>
    <string name="me_tab_title_0">Public</string>
    <string name="me_tab_title_1">Private</string>
    <string name="me_header_vote">Vote</string>
    <string name="me_header_voted">Voted</string>
    <string-array name="me_page_title">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="login_by_wechat">WECHAT</string>
    <string name="login_by_qq">QQ</string>
    <string name="login_by_weibo">WEIBO</string>
    <string name="login_by_phone">Login By Phone >></string>

    <string name="phone_login_title">Login</string>
    <string name="phone_verify_title">Verify</string>
    <string name="phone_integrate_info_title">Integrate Information</string>

    <string name="progress_loading_msg">Loading…</string>
    <string name="unknown_error">Unknown Error</string>

    <string name="fragment_phone_verify_sign_up_error_account_exist">Account exists, please login.</string>
    <string name="fragment_phone_verify_sign_up_error_account_not_exist">Account not exists!</string>
    <string name="fragment_phone_verify_sign_up_error_password_invalid">Password is invalid.</string>

    <string name="activity_guide_enter">Enter</string>

    <string name="text_load_error">Load failed, please check network!</string>
    <string name="text_load_nothing">No more available</string>
    <string name="activity_user_info_weibo_id_bind_forbid">Weibo has been binded, bind failed.</string>

    <string name="activity_splash_data_migration">Updating…</string>
    <string name="activity_shoot_permission_error_ok">OK</string>
    <string name="activity_shoot_permission_error_settings">Settings</string>
    <string name="activity_shoot_permission_error_title">Camera Inaccessible</string>
    <string name="activity_shoot_permission_error_msg">We need some  permissions to use camera,record audio and access storage. Please ensure you grant us necessary permission.</string>
    <string name="activity_main_move_LOC_moments">Move moments shot when you logout to current account?</string>
    <string name="activity_main_move_LOC_moments_positive">OK</string>
    <string name="activity_main_move_LOC_moments_negative">Not Now</string>
    <string name="activity_main_move_LOC_moments_progress">We are working on it…</string>
    <string name="activity_main_move_LOC_moments_progress_success">Done! Enjoy yourself</string>
    <string name="activity_main_msg_shoot_forbid">Permission forbade!</string>
    <string name="tb_munion_tip_download_prefix">Downloading：</string>
</resources>
