<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_switch"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_0"
            android:checked="true"
            android:icon="@drawable/ic_world"
            android:title="@string/navigation_item_text_0"/>
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/ic_diary"
            android:title="@string/navigation_item_text_1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_explore"
            android:title="@string/navigation_item_text_2"/>
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_me"
            android:title="@string/navigation_item_text_3"/>
    </group>
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_item_text_4"/>
    </group>
</menu>